<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.delaroystudios.bus_seat_booking_system.SignIn">
<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/register_here"
    android:textSize="32sp"
    android:gravity="center"
android:layout_marginTop="30dp"
    />
 <EditText
     android:layout_marginTop="40dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/user_id"
     android:id="@+id/id_user"

     />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:id="@+id/id_name"


        />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:id="@+id/phone"


        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email_id"
         />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_marginBottom="20dp"
        />
   <EditText
       android:layout_marginTop="10dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/conf_password"
       android:id="@+id/confpass"
       android:layout_marginBottom="10dp"
       />

    <Button

        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:onClick="logIn"
        />
</LinearLayout>
