<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.delaroystudios.bus_seat_booking_system.Bus_info_admin">
<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text="@string/administrator"
    android:textSize="30sp"
    android:gravity="center"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="20dp"
    />
<EditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:hint="@string/bus_id"
    android:id="@+id/busId"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/Source"
        android:id="@+id/from"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/destination"
        android:id="@+id/to"
        android:layout_marginBottom="20dp"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="20dp"
    >
 <EditText
     android:layout_width="110dp"
     android:layout_height="wrap_content"
     android:hint="@string/arrival"
     android:layout_marginEnd="20dp"
     />
    <EditText
        android:id="@+id/hour"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:hint="@string/hours"
        android:layout_marginEnd="20dp"
        />
    <EditText
        android:id="@+id/min"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:hint="@string/min"
        android:layout_marginEnd="20dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/dep"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/departure"
            android:layout_marginEnd="20dp"
            />

        <EditText
            android:id="@+id/hour2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/hours" />

        <EditText
            android:id="@+id/min2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:hint="@string/min2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/type"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
     android:id="@+id/spinner3"

            />

    </LinearLayout>

    <EditText
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fare" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
         android:layout_marginStart="60dp"
        android:layout_marginEnd="50dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"

        />
</LinearLayout>

</LinearLayout>
