<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#2980b9"

    tools:context="com.delaroystudios.bus_seat_booking_system.Bus_Information"

    >

    <TextView
        android:id="@+id/title"
        android:layout_width="251dp"
        android:layout_height="58dp"
        android:text="@string/bus_information"
        android:textSize="30sp"
        android:textColor="#FFF"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/bus_id"
            android:textSize="25sp" />

        <EditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/bus_id"

     />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt5"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/from"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/from"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt6"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/To"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/to"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt7"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/arriv"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/arrival"
          />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt8"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/depart"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/departure"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt10"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/fare"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fare1"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"

        >

        <TextView
            android:id="@+id/txt11"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:text="@string/type"
            android:textSize="25sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type"

            />
    </LinearLayout>
    <Button
        android:id="@+id/buton8"
        android:layout_width="250dp"
        android:layout_height="58dp"
        android:text="@string/pick_t"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:onClick="onClick"
        />

</LinearLayout>
