<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.delaroystudios.bus_seat_booking_system.Book_ticket">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/book_a_ticket"
    android:textSize="32sp"
    android:gravity="center_horizontal"
    android:textColor="@color/colorPrimaryDark"
    android:layout_marginBottom="20dp"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="10dp"
    >
    <TextView
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:text="@string/transanction_id"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/id_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="@string/user_id"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_user"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="@string/fare"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_fare"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="@string/Total"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_total"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="@string/balance"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_balance"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:layout_width="190dp"
            android:layout_height="45dp"
            android:text="@string/type"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_type"

            />
    </LinearLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/book"
        android:text="@string/book"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        />
</LinearLayout>
