<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.delaroystudios.bus_seat_booking_system.AdminLogin"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:textSize="32sp"
        android:layout_marginTop="50dp"
        android:textColor="#000"
        android:gravity="center"

        />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/menu3"
       android:layout_marginTop="100dp"
        >

        <EditText
            android:id="@+id/EditLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:shadowColor="#0000"
            android:textColor="#000"
            android:textColorHint="#9b59b6"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:id="@+id/Edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:textColor="#000"
            android:textColorHint="#9b59b6"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            />
        <EditText
            android:id="@+id/conf_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass"
            android:textColor="#000"
            android:textColorHint="#9b59b6"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Login2"
            android:id="@+id/admin_login"
            android:textSize="20sp"
            android:textColor="#000"
            android:onClick="log_admin"
            />
    </LinearLayout>

</RelativeLayout>
